desc text added

--- a/index.html
+++ b/index.html
@@ -25,24 +25,203 @@
     </nav>
     <div id="content">
       <div class="sections">
-        <h3>Home</h3>
-        <p></p>
+        <h2>Home</h2>
+        <p>
+          Welcome to Finact - the future of finance! We are a fintech company
+          that is dedicated to revolutionizing the way we interact with money.
+          Our goal is to make financial services more accessible, convenient,
+          and secure for everyone. With Finact, you can easily manage your
+          finances from the comfort of your home. We offer a range of services
+          that cater to your specific needs, whether you're an individual, small
+          business owner, or large corporation. Our services include banking,
+          lending, investments, and insurance, all under one roof. We believe in
+          empowering our customers with the right tools and information to make
+          informed financial decisions. Our user-friendly platform provides you
+          with real-time information about your accounts, transactions, and
+          investments. You can easily track your spending, set savings goals,
+          and monitor your credit score with just a few clicks. At Finact, we
+          prioritize security above everything else. We use the latest
+          encryption technologies to safeguard your data and protect you against
+          fraud and cyber-attacks. You can trust us to keep your information
+          safe and secure. Our team of financial experts is always here to help
+          you with any queries or concerns you may have. We are dedicated to
+          providing top-notch customer service, and our team is always ready to
+          assist you with any financial matter. We understand that every
+          individual and business has unique financial needs, and that's why we
+          offer a range of customizable products and services that can be
+          tailored to your specific requirements. Our lending services offer
+          competitive rates and flexible repayment options that suit your
+          budget, while our investment options provide a range of opportunities
+          to help you grow your wealth. With Finact, you can say goodbye to the
+          hassle of traditional banking and financial services. Our
+          user-friendly platform and personalized services make it easy for you
+          to manage your finances from anywhere, at any time. We believe that
+          everyone deserves to have access to high-quality financial services,
+          and we're committed to making that a reality. Join the Finact family
+          today, and experience the future of finance!
+        </p>
       </div>
       <div class="sections" id="about">
-        <h3>About</h3>
-        <p></p>
+        <h2>About</h2>
+        <p>
+          Welcome to Finact, your go-to destination for all things finance. At
+          Finact, we believe that everyone should have access to reliable and
+          convenient financial services. Our mission is to empower our customers
+          to make informed decisions about their financial future, by providing
+          them with the tools and resources they need to take control of their
+          finances. At Finact, we pride ourselves on our innovative approach to
+          finance. Our team of experts have years of experience in the financial
+          industry, and are constantly pushing the boundaries to create new and
+          innovative solutions for our customers. Whether you're looking to save
+          for the future, invest your money, or simply manage your finances more
+          effectively, we have the tools and resources you need to succeed. We
+          believe in transparency and honesty in everything we do. That's why we
+          make sure that all of our products and services are designed with our
+          customers' best interests in mind. We strive to make sure that our
+          fees and charges are fair and transparent, and that our customers have
+          all the information they need to make informed decisions about their
+          finances. At Finact, we understand that everyone's financial situation
+          is different. That's why we offer a range of products and services
+          that are tailored to meet the unique needs of each of our customers.
+          Whether you're just starting out and need help building your credit,
+          or you're a seasoned investor looking to diversify your portfolio, we
+          have a solution that will work for you. But we're more than just a
+          financial services provider. We're also committed to making a positive
+          impact in the communities we serve. We believe that financial
+          empowerment is a key component of overall wellbeing, and we're
+          dedicated to working with individuals and organizations to improve
+          financial literacy and promote financial independence. At Finact,
+          we're passionate about finance, and we're dedicated to helping our
+          customers achieve their financial goals. Whether you're just starting
+          out on your financial journey, or you're looking for new and
+          innovative ways to manage your money, we're here to help. Join the
+          Finact community today, and start taking control of your finances.
+        </p>
       </div>
       <div class="sections" id="services">
-        <h3>Services</h3>
-        <p></p>
+        <h2>Services</h2>
+        <p>
+          As a tax consultancy, Finact is dedicated to providing comprehensive
+          and efficient services that help businesses navigate the complex world
+          of taxation. Our team of highly trained professionals offers a range
+          of services that help our clients to minimize their tax liabilities,
+          maximize their tax credits and deductions, and stay in compliance with
+          tax regulations. We understand that taxation can be a daunting and
+          complicated task, which is why we are committed to helping our clients
+          with customized solutions that are tailored to their individual needs.
+          We offer a variety of services to help businesses of all sizes and
+          industries, including: Tax Planning: Our tax planning services are
+          designed to help businesses optimize their tax position by identifying
+          opportunities for tax savings and credits. Our team of experts will
+          help you develop a tax strategy that is aligned with your business
+          goals and objectives, while ensuring compliance with all applicable
+          tax laws and regulations. Tax Compliance: We provide tax compliance
+          services that ensure that our clients meet all their tax obligations
+          and remain in compliance with all tax regulations. Our services
+          include tax return preparation, filing, and representation before tax
+          authorities. Tax Dispute Resolution: In case of any tax disputes, we
+          provide our clients with support and representation. We work closely
+          with our clients to analyze the situation, prepare an action plan, and
+          provide representation before the tax authorities. Our goal is to
+          resolve tax disputes as quickly and efficiently as possible,
+          minimizing any disruption to your business operations. International
+          Tax Services: Our team has extensive experience in providing
+          international tax services, helping businesses navigate the
+          complexities of global tax regulations. We provide advice on
+          cross-border tax planning, compliance, and reporting, ensuring that
+          our clients are fully compliant with all applicable tax laws and
+          regulations. Tax Technology Solutions: We leverage technology to
+          deliver efficient and cost-effective tax services to our clients. Our
+          tax technology solutions help businesses automate their tax processes,
+          enabling them to save time and reduce errors. At Finact, we are
+          committed to providing our clients with the highest level of service
+          and expertise. We work closely with our clients to understand their
+          unique needs and provide customized solutions that help them achieve
+          their business goals. Our team of tax experts has years of experience
+          in helping businesses of all sizes and industries navigate the complex
+          world of taxation. Contact us today to learn more about our services
+          and how we can help your business.
+        </p>
       </div>
       <div class="sections" id="newsArticle">
-        <h3>News Article</h3>
-        <p></p>
+        <h2>News Article</h2>
+        <p>
+          At Finact, we believe in keeping our clients informed and up-to-date
+          on the latest developments in the finance industry. That's why we have
+          a dedicated news articles section on our website, where you can find
+          the latest news and analysis on a wide range of financial topics. Our
+          news articles cover a wide range of topics, from global economic
+          trends to local tax developments. We understand that staying on top of
+          these issues can be challenging, which is why we aim to provide our
+          clients with accurate and timely information on the most important
+          issues affecting their finances. In our news articles section, you'll
+          find articles written by our team of experienced financial analysts,
+          as well as articles from reputable news sources from around the world.
+          We carefully curate the content on our website to ensure that our
+          clients are receiving the most accurate and relevant information. Our
+          news articles cover a variety of topics, including tax policy changes,
+          regulatory developments, investment opportunities, and more. We
+          believe that staying informed is key to making informed financial
+          decisions, and we want to make it as easy as possible for our clients
+          to access the information they need. Whether you're a business owner,
+          an investor, or just someone looking to stay informed about the latest
+          developments in finance, our news articles section has something for
+          everyone. We strive to provide our readers with high-quality, in-depth
+          analysis of the issues that matter most. At Finact, we are committed
+          to providing our clients with the information they need to make
+          informed financial decisions. Our news articles section is just one of
+          the many ways we demonstrate this commitment. We hope you'll take the
+          time to explore the articles on our website and stay up-to-date on the
+          latest developments in the finance industry.
+        </p>
       </div>
       <div class="sections" id="webinars">
-        <h3>Webinars</h3>
-        <p></p>
+        <h2>Webinars</h2>
+        <p>
+          Webinars are an invaluable resource for those seeking to learn and
+          grow in their professional and personal lives. At Finact, we are
+          committed to helping our clients stay up-to-date with the latest
+          trends, news, and insights in the finance industry. That's why we
+          offer a wide variety of webinars on various topics, from tax
+          strategies to investment opportunities. Our webinars are designed to
+          provide you with the knowledge and tools you need to navigate the
+          complex world of finance. Whether you're an experienced investor or
+          just starting out, our webinars offer valuable insights and practical
+          advice that can help you make informed decisions about your finances.
+          One of the benefits of attending a Finact webinar is the opportunity
+          to learn from industry experts. Our webinars are led by experienced
+          professionals with years of experience in finance and taxation. They
+          bring a wealth of knowledge and expertise to the table, offering
+          insights that you won't find anywhere else. This makes our webinars an
+          excellent way to gain a deeper understanding of complex financial
+          concepts and strategies. Our webinars cover a range of topics, from
+          tax planning and compliance to investment opportunities and risk
+          management. We also offer webinars that cover the latest trends and
+          developments in the finance industry. Our webinars are designed to be
+          interactive, allowing you to ask questions and engage with our
+          experts. This ensures that you get the most out of your webinar
+          experience and can apply what you've learned to your own financial
+          situation. Another benefit of attending a Finact webinar is the
+          convenience. Our webinars are online, so you can attend from the
+          comfort of your own home or office. This makes it easy to fit a
+          webinar into your busy schedule, and you don't have to worry about
+          travel time or expenses. Plus, all of our webinars are recorded, so if
+          you can't attend the live event, you can watch the recording at a time
+          that's convenient for you. At Finact, we believe that knowledge is
+          power. That's why we offer our webinars as a free service to our
+          clients. We want to ensure that you have access to the information and
+          resources you need to make informed decisions about your finances. Our
+          webinars are just one of the many ways we support our clients and help
+          them achieve their financial goals. In conclusion, Finact's webinars
+          offer a unique opportunity to learn from industry experts, stay
+          up-to-date with the latest trends, and gain valuable insights into the
+          world of finance. They are designed to be convenient, interactive, and
+          informative, making them an excellent resource for anyone looking to
+          grow their knowledge and skills in finance. Whether you're a seasoned
+          professional or just starting out, our webinars can help you navigate
+          the complexities of finance and make smart, informed decisions about
+          your money.
+        </p>
       </div>
     </div>
     <script src="search.js"></script>
