--- a/index.html
+++ b/index.html
@@ -17,10 +17,9 @@
         <li><a href="#webinars">Webinars</a></li>
       </ul>
       <div class="search-box">
-        <label for="search-input">Search:</label>
-        <input type="text" id="search-input" />
-        <button id="search-btn">Search</button>
-        <button id="clear-btn">Clear</button>
+        <input type="search" id="search-input" placeholder="Search" />
+        <button id="search-btn">Go Search</button>
+        <button id="clear-btn">Clear Selected</button>
       </div>
     </nav>
     <div id="content">
