bootstrap modal added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
       </ul>
       <div class="search-box">
         <input type="search" id="search-input" placeholder="Search" />
-        <button id="search-btn">Go Search</button>
+        <button
+          id="search-btn"
+          class="btn btn-primary"
+          data-bs-toggle="modal"
+          data-bs-target="#exampleModal"
+        >
+          Go Search
+        </button>
         <button id="clear-btn">Clear Selected</button>
       </div>
     </nav>
@@ -292,5 +299,6 @@
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </body>
 </html>
