meta added for matches

--- a/index.html
+++ b/index.html
@@ -257,6 +257,7 @@
               class="btn-close"
               data-bs-dismiss="modal"
               aria-label="Close"
+              id="modalCloseCrossBtn"
             ></button>
           </div>
           <div class="modal-body" id="modalBody">
