span destruction bug fixed

--- a/index.html
+++ b/index.html
@@ -25,10 +25,15 @@
       </ul>
       <div class="search-box">
         <input type="search" id="search-input" placeholder="Search" />
-        <button id="search-btn">Go Search</button>
-        <button id="clear-btn">Clear Selected</button>
+        <button type="button" class="btn btn-success btn-md" id="search-btn">
+          Go Search
+        </button>
+        <button type="button" class="btn btn-warning btn-md" id="clear-btn">
+          Clear Selected
+        </button>
       </div>
     </nav>
+
     <div id="content">
       <div class="sections">
         <h2>Home</h2>
