another dom fetching implemented

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
         <li><a href="#webinars">Webinars</a></li>
       </ul>
       <div class="search-box">
+        <button
+          type="button"
+          class="btn btn-danger btn-md"
+          id="fetchAnotherDomBtn"
+        >
+          Fetch another dom
+        </button>
         <input type="search" id="search-input" placeholder="Search" />
         <button type="button" class="btn btn-success btn-md" id="search-btn">
           Go Search
