search another dom

--- a/otherFiles/dom2.html
+++ b/otherFiles/dom2.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dom 2</title>
+    <link rel="stylesheet" href="../highlight.css" />
   </head>
   <body>
     <div id="content">
@@ -12,6 +13,7 @@
       <p>This</p>
       <p>Is</p>
       <p>Dom 2</p>
+      <p>Home</p>
     </div>
   </body>
 </html>
