--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
         <li><a href="#webinars">Webinars</a></li>
       </ul>
       <div class="search-box">
-        <button
+        <!-- <button
           type="button"
           class="btn btn-danger btn-md"
           id="fetchAnotherDomBtn"
         >
           Fetch another dom
-        </button>
+        </button> -->
         <input type="search" id="search-input" placeholder="Search" />
         <button type="button" class="btn btn-success btn-md" id="search-btn">
           Go Search
+        </button>
+        <button type="button" class="btn btn-success btn-md" id="webArtSearch">
+          Search webinars and articles
         </button>
         <button type="button" class="btn btn-warning btn-md" id="clear-btn">
           Clear Selected
@@ -305,12 +308,16 @@
       </div>
     </div>
     <script src="search.js"></script>
-    <script src="searchAnotherDOM.js"></script>
+    <!-- stopwords -->
+    <!-- <script src="stopword.js"></script> -->
+    <!-- <script src="searchAnotherDOM.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
       crossorigin="anonymous"
     ></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/stopword/dist/stopword.umd.min.js"></script> -->
   </body>
 </html>
